challenge10/webnodb_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webnodb-deployment
  namespace: aboussarsar
  labels:
    app: webnodb
spec:
  replicas: 1
  selector:
    matchLabels:
      app: webnodb
  template:
    metadata:
      labels:
        app: webnodb
    spec:
      containers:
      - name: webnodb
        image: azizboussarsar/challenge1
        ports:
        - containerPort: 5000
        resources:
          requests:
            cpu: "100m"
            memory: "100Mi"
          limits:
            cpu: "200m"
            memory: "200Mi"
---
apiVersion: v1
kind: Service
metadata:
  name: webnodb-service
  namespace: aboussarsar
spec:
  type: ClusterIP
  selector:
    app: webnodb
  ports:
  - protocol: TCP
    port: 80
    targetPort: 5000
