challenge10/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-ingress
  namespace: aboussarsar  # Replace with your namespace
  annotations:
    kubernetes.io/ingress.class: "nginx"  
    #metallb.universe.tf/address-pool: "default"  # MetalLB specific annotation if required
spec:
  rules:
    - host: webnodb.aboussarsar.net4255.luxbulb.org
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: webnodb-service
                port:
                  number: 80
    - host: webdb.aboussarsar.net4255.luxbulb.org
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: webdb-service
                port:
                  number: 80
